Picture bug fix

--- a/index.html
+++ b/index.html
@@ -19,23 +19,23 @@
 
       <div id="logo-mobile">
         <a href="#">
-          <img id="logo" src="/images/logo.svg" alt="site logo">
+          <img id="logo" src="images/logo.svg" alt="site logo">
         </a>
       </div>
 
       <div id="hero-mobile">
-        <img src="/images/hero-mobile.jpg" alt="girl looking into camera">
+        <img src="images/hero-mobile.jpg" alt="girl looking into camera">
       </div>
 
       <div id="hero-desktop">
-        <img src="/images/hero-desktop.jpg" alt="">
+        <img src="images/hero-desktop.jpg" alt="">
       </div>
 
       <section class="coming-soon">
 
         <div id="logo-desktop">
           <a href="#">
-            <img id="logo" src="/images/logo.svg" alt="site logo">
+            <img id="logo" src="images/logo.svg" alt="site logo">
           </a>
         </div>
 
@@ -47,9 +47,9 @@
 
         <div class="email-input">
           <input id="email" type="email" placeholder="Email Address">
-          <img id='error' src="/images/icon-error.svg" alt="email is invalid">
+          <img id='error' src="images/icon-error.svg" alt="email is invalid">
           <button class="confirm" onclick="validate()">
-            <img src="/images/icon-arrow.svg" alt="arrow icon">
+            <img src="images/icon-arrow.svg" alt="arrow icon">
           </button>
         </div>
 
